--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,16 @@
 {
     "cSpell.words": [
+        "alexa",
+        "disqus",
+        "dribbble",
+        "jemoji",
+        "ldquo",
+        "lsquo",
+        "mkdn",
+        "mkdown",
+        "rdquo",
+        "rsquo",
+        "scopus",
         "Zupko"
     ]
 }
