--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Chang, Zhangyu (常章豫)"
+title                    : "Chang, Zhangyu 常章豫"
 title_separator          : "-"
 name                     : &name "Chang, Zhangyu 常章豫"
 description              : &description "personal description"
@@ -22,7 +22,7 @@ repository               : "changzhangyu/changzhangyu.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   name             : "Chang, Zhangyu 常章豫"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. in Computer Science"
