--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,12 +7,12 @@
 # NOTE that only one of the CV options should be selected, the first is for the
 #      Markdown formatted page while the second is generated using JSON.
 
-main:    
+main:
+   - title: "Blog Posts"
+    url: /year-archive/
+    
   - title: "CV"
     url: /cv/
 
   - title: "中文"
     url: /zh/
-  
-  - title: "Zotero"
-    url: /zotero/
